prepare 4.0.0 beta 3, integrate Linux runtime